<resources>
    <string name="app_name">DMS AppS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profil">About Me</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="home_nama">Dimas Arestu Prasmanto</string>
    <string name="home_universitas">Universitas Komputer Indonesia</string>
    <string name="home_umur">20</string>
    <string name="home_genre">Pria</string>
    <string name="home_darah">O+</string>
    <string name="home_hoby">Hobby</string>
    <string name="basket">Basket</string>
    <string name="gaming">Gaming</string>
    <string name="anime">Watching Anime</string>

    <string name="desc_about">Dimas Apps merupakan aplikasi tentang keseharian diri, didalamnya terdapat biodata diri, aktivity sehari-hari dan gallery, aplikasi ini masih dalam versi 1.0.1</string>
</resources>
