<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".ui.home.HomeFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/atas"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:gravity="center"
            android:background="@drawable/bg_home"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profimage"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/pp"
                app:civ_border_color="#ffffff"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.06"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Dimas Arestu Prasmanto"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profimage" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="50dp"
                android:text="@string/home_universitas"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card_id"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="220dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/bg_sky"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:src="@drawable/age"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:textColor="#ffffff"
                        android:text="@string/home_umur"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/white_line"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:src="@drawable/gender"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="24dp"
                        android:textStyle="bold"
                        android:text="@string/home_genre"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:src="@drawable/blood"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="24dp"
                        android:textStyle="bold"
                        android:text="@string/home_darah"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/atas"
            android:id="@+id/scroll_id">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/atas"
            android:orientation="vertical">
        <TextView
            android:id="@+id/hobi"
            android:layout_below="@+id/card_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="70dp"
            android:textSize="24dp"
            android:textStyle="bold"
            android:text="@string/home_hoby" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hobi"
            android:layout_margin="24dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:id="@+id/detail_hobi">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="13dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/basket"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:text="@string/basket"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingHorizontal="18dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/gaming"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:textColor="#000000"
                    android:text="@string/gaming"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingHorizontal="18dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/movie"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:text="@string/anime"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/makes"
            android:layout_below="@+id/detail_hobi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"

            android:textSize="24dp"
            android:textStyle="bold"
            android:text="Makes/Mikes" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/makes"
            android:orientation="horizontal"
            android:layout_margin="24dp"
            android:id="@+id/detail_makes">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="13dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/ayam"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:text="Ayam Goreng"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="18dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/kopi"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:text="Ice Coffee"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/ambition"
            android:layout_below="@+id/detail_makes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:textSize="24dp"
            android:textStyle="bold"
            android:text="Interest" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ambition"
            android:orientation="horizontal"
            android:layout_margin="24dp"
            android:id="@+id/detail_ambition">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="13dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/progaming"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:text="Programing"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="18dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/pc"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:text="Computer"/>

            </LinearLayout>


        </LinearLayout>

            <TextView
                android:id="@+id/cc"
                android:layout_below="@+id/detail_ambition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:textSize="24dp"
                android:textStyle="bold"
                android:text="Ambition" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cc"
                android:orientation="horizontal"
                android:layout_margin="24dp"
                android:id="@+id/cita-cita">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="13dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:src="@drawable/progaming"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="#000000"
                        android:text="Programing"/>

                </LinearLayout>


        </LinearLayout>
        </LinearLayout>
        </ScrollView>


    </RelativeLayout>





</android.support.constraint.ConstraintLayout>